# crate-settings

./: Cargo.toml  README.md  build.rs  publish.sh
examples/example_crate_with_settings/: Cargo.toml
examples/example_crate_with_settings/src/: lib.rs
examples/workspace_root/: Cargo.toml
examples/workspace_root/inner_a/: Cargo.toml
examples/workspace_root/inner_a/inner_b/: Cargo.toml
examples/workspace_root/inner_a/inner_b/inner_c/: Cargo.toml
examples/workspace_root/inner_a/inner_b/src/: lib.rs
examples/workspace_root/src/: lib.rs
settings-core/: Cargo.toml
settings-macros/: Cargo.toml  build.rs
settings-macros/src/: lib.rs
src/: lib.rs
tests/: tests.rs
tests/workspace_root/: Cargo.toml
tests/workspace_root/inner_a/: Cargo.toml
tests/workspace_root/inner_a/inner_b/: Cargo.toml
tests/workspace_root/inner_a/inner_b/inner_c/: Cargo.toml
workspace_root/: Cargo.toml
workspace_root/inner_a/: Cargo.toml
workspace_root/inner_a/inner_b/: Cargo.toml
workspace_root/inner_a/inner_b/inner_c/: Cargo.toml
workspace_root/inner_a/inner_b/inner_c/src/: lib.rs
workspace_root/inner_a/src/: lib.rs
