[workspace]
members = [
	"settings-macros",
	"workspace_root",
	"workspace_root/inner_a",
	"workspace_root/inner_a/inner_b",
	"workspace_root/inner_a/inner_b/inner_c"
]

[package]
name = "crate-settings"
version = "0.1.0"
edition = "2021"
authors = ["sam0x17"]
homepage = "https://sam0x17.dev"
description = "Allows compile-time access to crate-specific settings defined as metadata in Cargo.toml."
keywords = ["settings", "compile-time", "environment", "feature"]
license = "MIT"

[dependencies]
settings-macros = { path = "settings-macros", version = "0.1.0" }

[dev-dependencies]
workspace_root = { path = "workspace_root", version = "0.1.0" }
inner_a = { path = "workspace_root/inner_a", version = "0.1.0" }
inner_b = { path = "workspace_root/inner_a/inner_b", version = "0.1.0" }
inner_c = { path = "workspace_root/inner_a/inner_b/inner_c", version = "0.1.0" }

# the following metadata is used by tests
[package.metadata.settings]
example-crate = { some-key = "hey", something_else = false }
another-crate = { number = 33, float = 55.6, arr = ["a", "b", "c"] }
cool_crate = { some_date_time = 1979-05-27 07:32:00Z, int_arr = [1, 2, 3, 4, 5, 6] }
weird_crate = { mixed_arr = ["hey", 1, false], table = { key1 = "hey", key2 = 3 } }
