[package]
name = "settings-macros"
version = "0.0.5"
edition = "2021"
authors = ["sam0x17"]
homepage = "https://sam0x17.dev"
description = "Macros crate for `crate-settings`"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
toml = "0.7"
proc-macro2 = "1"
syn = "2"
quote = "1"
derive-syn-parse = "0.1.5"
walkdir = "2"
