[package]
name = "inner_c"
version = "0.0.2"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-settings = { path = "../../../../../", version = "0.0.2" }

[package.metadata.settings]
inner_c = { some_inner_int = 34 }
